# servipal-backend

./: .dockerignore  .env.example  .gitignore  .mcp.json  ADMIN_CACHE_DOCUMENTATION.md  CACHE_QUICK_START.md  Dockerfile  README.md  SECURITY_IMPLEMENTATION_GUIDE.md  check_queue.py  cloudbuild.yaml  compose.yaml  next_features.txt  otp.py  pyproject.toml  pytest.ini  rpc.md  test_amqp.py  test_email.py  test_failures_report.txt  test_failures_report_2.txt  test_output.txt  test_output_all.txt  test_output_current.txt  test_output_current_2.txt  test_output_current_3.txt  test_output_current_4.txt  test_output_current_5.txt  test_output_current_6.txt  test_output_current_7.txt  test_output_current_8.txt  test_precision_output.txt  user_service_test_results.txt  verify_import.py
.postman/: resources.yaml
app/: main.py  worker.py
docs/: SECRETS_ROTATION_STRATEGY.py  fraud_detection.md
postman/: ServiPal_API.postman_collection.json  ServiPal_Development.postman_environment.json  ServiPal_Production.postman_environment.json
prometheus/: prometheus.yml
tests/: conftest.py  test_admin_service.py  test_celery_payment_tasks.py  test_delivery_service.py  test_dispute_service.py  test_flutterwave_v4_charge.py  test_food_service.py  test_fraud_engine.py  test_fraud_service_logging.py  test_laundry_service.py  test_notification_service.py  test_order_process_payment.py  test_payment_idempotency.py  test_payment_precision.py  test_payment_queue_dispatcher.py  test_payment_service.py  test_product_service.py  test_review_service.py  test_user_service.py  test_wallet_service.py
(+192 files in other folders)
